# AbstarctVM

./: CMakeLists.txt  README.md  lexer_decision_tree
include/: Engine.h  ErrorHandler.h  IOperand.h  OperandDerived.h  Stack.h  Token.h
src/: Engine.cpp  IOperand.cpp  OperandDerived.cpp  Stack.cpp  Token.cpp  Utils.cpp  main.cpp
